[tool.poetry]
name = "handson-streamlit"
version = "0.1.0"
description = ""
authors = ["Sandra Pietrowska"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "1.5.3"
streamlit = "1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
